--- a/styles.css
+++ b/styles.css
@@ -1,71 +1,75 @@
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap");
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 body {
-  background-color: lightcyan;
-  font-family: Arial, sans-serif;
+  font-family: "Jost", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: url(./img/max-bender-1YHXFeOYpN0-unsplash.jpg) no-repeat center
+    center/cover;
 }
 .container {
-  max-width: 1200px;
-  width: 90%;
-  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 0 20px;
 }
-.reviews-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  max-width: 1200px;
-  gap: 20px;
-  margin: 100px auto;
+.Todo-App {
+  width: 100%;
+  max-width: 400px;
+  padding: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 30px;
+  color: #fff;
+  border-radius: 20px;
+  box-shadow: 0 0 100px rgba(0, 0, 0, 0.5);
+  border: 2px solid rgba(255, 255, 255, 0.18);
+  backdrop-filter: blur(6px);
 }
-.review-card {
-  background-color: #fff;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 6px;
+.Todo-App h1 {
+  font-size: 2.5rem;
 }
-.review-heading {
-  font-size: 40px;
-  font-weight: 700;
-  margin-bottom: 20px;
+.input-area {
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  display: flex;
 }
-.review-text {
-  font-size: 20px;
-  margin-bottom: 20px;
+.input-area input {
+  flex: 1;
+  width: 100%;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 8px;
+  font-size: 1rem;
+  outline: none;
+  background: rgba(255, 255, 255, 0.2);
+  color: #fff;
 }
-.reivew-person {
-  font-size: 18px;
-  font-weight: 700;
+.input-area input::placeholder {
+  color: #4e4d4d;
 }
-@media (max-width: 1000px) {
-  .review-card {
-    padding: 15px;
-  }
-  .review-heading {
-    font-size: 30px;
-    margin-bottom: 15px;
-  }
-  .review-text {
-    font-size: 15px;
-    margin-bottom: 8px;
-  }
-  .reivew-person {
-    font-size: 14px;
-  }
-}
-@media (max-width: 500px) {
-  .review-card {
-    padding: 10px;
-  }
-  .review-heading {
-    font-size: 20px;
-    margin-bottom: 10px;
-  }
-  .review-text {
-    font-size: 14px;
-    margin-bottom: 6px;
-  }
-  .reivew-person {
-    font-size: 12px;
-  }
+.input-area button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 10px;
+  padding: 8px;
+  border-radius: 50%;
+  color: #4e4d4d;
+  font-size: 1.1rem;
+  background: rgba(255, 255, 255, 0.2);
+  border: 2px solid rgba(255, 255, 255, 0.18);
+  cursor: pointer;
+  transition: all 0.2 ease;
 }
