--- a/styles.css
+++ b/styles.css
@@ -73,3 +73,16 @@ body {
   cursor: pointer;
   transition: all 0.2 ease;
 }
+.input-area button:hover {
+  transform: scale(1.1);
+  background: #fff;
+  color: #000;
+}
+.todos-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#task-list {
+  width: 100%;
+}
