--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body {
   justify-content: center;
   flex-direction: column;
   gap: 30px;
-  color: #fff;
+  color: #000;
   border-radius: 20px;
   box-shadow: 0 0 100px rgba(0, 0, 0, 0.5);
   border: 2px solid rgba(255, 255, 255, 0.18);
@@ -54,7 +54,7 @@ body {
   font-size: 1rem;
   outline: none;
   background: rgba(255, 255, 255, 0.2);
-  color: #fff;
+  color: #000;
 }
 .input-area input::placeholder {
   color: #4e4d4d;
@@ -85,4 +85,21 @@ body {
 }
 #task-list {
   width: 100%;
+}
+
+#task-list li {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background: rgba(255, 255, 255, 0.18);
+  margin-bottom: 10px;
+  padding: 8px 10px;
+  border-radius: 30px;
+  color: #fff;
+  font-size: 1.2rem;
+  position: relative;
+  transition: box-shadow 0.2s ease;
+}
+#task-list li:hover {
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
 }
